added new colors

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ h1{
 }
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 #yo{
     color: orange;
@@ -15,4 +16,11 @@ body{
 }
 .half-width img{
     width: 100%;
+    }
+.banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
 }
